[workspace]
members = [
    "crates/lyon",
    "crates/path",
    "crates/tessellation",
    "crates/algorithms",
    "crates/geom",
    "crates/extra",
    "cli",
    "wasm_test",
    "examples/wgpu",
    "examples/wgpu_svg",
    "bench/tess",
    "bench/path",
    "bench/geom",
]

exclude = [
    ".vscode/*",
    "all.sh",
    "assets/*",
    "examples/*",
    "bench/*",
    "cli/*",
]

resolver = "2"

# Uncomment this when profiling.
#[profile.release]
#debug = true

# Local allocator-api2 checkout with the `assume` performance fix.
#[patch.crates-io]
#allocator-api2 = { path = "../../tmp/allocator-api2" }
