[package]

name = "lyon_algorithms"
version = "0.16.0"
description = "2D Path manipulation/transformation algorithms."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_algorithms/"
keywords = ["2d", "graphics", "svg"]
license = "MIT/Apache-2.0"
workspace = ".."
edition = "2018"

[lib]
name = "lyon_algorithms"
path = "src/lib.rs"

[features]
serialization = ["serde", "lyon_path/serialization"]

[dependencies]

lyon_path = { version = "0.16.0", path = "../path" }
serde = { version = "1.0", optional = true, features = ["serde_derive"] }
sid = "0.6"
