[package]

name = "vodk_alloc"
description = "A simple tool to help recycling memory."
version = "0.0.1"
license = "MIT/Apache-2.0"
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/vodk.rs"
include = [ "Cargo.toml", "src/*.rs" ]

[lib]

name = "vodk_alloc"
path = "src/lib.rs"
