[package]
name = "lyon_bezier"
version = "0.2.0"
description = "2d quadratic and cubic bezier curve math, featuring an efficient flattening algorithm."
authors = ["Nicolas Silva <nical@fastmail.com>"]
repository = "https://github.com/nical/lyon"
license = "MIT/Apache-2.0"

[lib]
name = "lyon_bezier"

[dependencies]
euclid = "0.10.1"