[package]
name = "lyon_bezier"
version = "0.5.0"
description = "2d quadratic and cubic bezier curve math, featuring an efficient flattening algorithm."
authors = ["Nicolas Silva <nical@fastmail.com>"]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_bezier/"
keywords = ["2d", "graphics", "bezier"]
license = "MIT/Apache-2.0"
workspace = ".."

[lib]
name = "lyon_bezier"

[dependencies]
euclid = "0.13"
arrayvec = "0.3"
