[package]
name = "lyon_cli"
version = "0.1.0"
authors = ["Nicolas Silva <nical@fastmail.com>"]
workspace = ".."

[[bin]]
name = "lyon"
path = "src/main.rs"

[dependencies]
lyon = { path = "../", features = ["svg", "extra", "libtess2", "debugger"]}
clap = "2.19.2"
rand = "0.3"

gfx = "0.17.1"
gfx_device_gl = "0.15.0"
gfx_window_glutin = "0.20.0"
glutin = "0.12.0"
itertools = "0.7.8"
regex = "1.0.0"
