[package]
name = "lyon_cli"
version = "0.1.0"
authors = ["Nicolas Silva <nical@fastmail.com>"]
edition = "2018"
workspace = "../"

[[bin]]
name = "lyon"
path = "src/main.rs"

[dependencies]
lyon = { path = "../crates/lyon", features = ["svg", "extra", "libtess2", "debugger", "experimental"]}
clap = "2.32.0"
rand = "0.6"
env_logger = "0.7"
wgpu = "0.9.0"
winit = "0.25"
futures = "0.3.5"
bytemuck = "1.2.0"
itertools = "0.7.8"
regex = "1.0.0"
