[package]
name = "lyon_cli"
version = "0.1.0"
authors = ["Nicolas Silva <nical@fastmail.com>"]
edition = "2018"
workspace = "../"

[[bin]]
name = "lyon"
path = "src/main.rs"

[dependencies]
lyon = { path = "../crates/lyon", features = ["extra", "debugger"]}
clap = "3.2.22"
rand = "0.6"
env_logger = "0.7"
wgpu = "0.13.1"
winit = "0.27.5"
futures = "0.3.5"
bytemuck = "1.2.0"
itertools = "0.7.8"
regex = "1.5.5"
