[package]

name = "lyon_core"
version = "0.1.1"
description = "Common resources to all lyon crates."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
license = "MIT/Apache-2.0"

[lib]
name = "lyon_core"
path = "src/lib.rs"

[dependencies]

sid = { version = "0.1.0" }
sid_vec = { version = "0.1.0" }
euclid = "0.7.1"