[package]

name = "lyon_core"
version = "0.4.0"
description = "Common resources to all lyon crates."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://nical.github.io/lyon-doc/lyon_core/"
license = "MIT/Apache-2.0"
workspace = ".."

[lib]
name = "lyon_core"

[dependencies]
euclid = "0.10.1"