[package]

name = "lyon_core"
version = "0.4.1"
description = "Common resources to all lyon crates."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_core/"
license = "MIT/Apache-2.0"
workspace = ".."

[lib]
name = "lyon_core"

[dependencies]
euclid = "0.10.1"