[package]

name = "vodk_data"
version = "0.0.2"
description = "Tiny RTTI library."
license = "MIT"
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/vodk.rs"
include = [ "Cargo.toml", "src/*.rs" ]
license = "MIT/Apache-2.0"


[lib]

name = "vodk_data"
path = "src/lib.rs"
