[package]

name = "lyon_extra"
version = "0.4.1"
description = "Various optional utilities for the lyon crate."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_extra/"
license = "MIT/Apache-2.0"
workspace = ".."

[lib]
name = "lyon_extra"

[dependencies]

lyon_core = { version = "0.4.1", path = "../core" }
lyon_path = { version = "0.4.1", path = "../path" }
lyon_path_builder = { version = "0.4.1", path = "../path_builder" }
lyon_path_iterator = { version = "0.4.1", path = "../path_iterator" }
