[package]

name = "lyon_extra"
version = "0.8.6"
description = "Various optional utilities for the lyon crate."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_extra/"
license = "MIT/Apache-2.0"
workspace = ".."

[lib]
name = "lyon_extra"

[dependencies]

lyon_core = { version = "0.8.0", path = "../core" }
lyon_path = { version = "0.8.6", path = "../path" }
lyon_svg = { version = "0.8.6", path = "../svg" }
