[package]
name = "lyon_geom"
version = "0.9.0"
description = "2D quadratic and cubic bezier arcs and line segment math on top of euclid."
authors = ["Nicolas Silva <nical@fastmail.com>"]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_geom/"
keywords = ["2d", "graphics", "bezier", "geometry"]
license = "MIT/Apache-2.0"
workspace = ".."

[lib]
name = "lyon_geom"

[dependencies]
euclid = "0.17"
arrayvec = "0.4"
num-traits = "0.1.40"
