[package]
name = "lyon_geom"
version = "0.12.7"
description = "2D quadratic and cubic bézier arcs and line segment math on top of euclid."
authors = ["Nicolas Silva <nical@fastmail.com>"]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_geom/"
keywords = ["2d", "graphics", "bezier", "geometry"]
license = "MIT/Apache-2.0"
workspace = ".."
edition = "2018"

[lib]
name = "lyon_geom"

[features]
serialization = ["serde", "euclid/serde"]

[dependencies]
euclid = "0.19.0"
arrayvec = "0.4"
num-traits = "0.2"
serde = {version = "1.0", optional = true, features = ["serde_derive"] }
