[package]
name = "lyon_gfx"
version = "0.3.2"
description = "A 2d renderer based on lyon and gfx-rs."
authors = ["Nicolas Silva <nical@fastmail.com>"]
repository = "https://github.com/nical/lyon"
documentation = "https://nical.github.io/lyon-doc/lyon_gfx/"
keywords = ["2d", "graphics", "tessellation"]
license = "MIT/Apache-2.0"

[dependencies]
gfx = "0.13"
lyon_core = { version = "0.3.2", path = "../core" }
lyon_path = { version = "0.3.2", path = "../path" }
lyon_bezier = { version = "0.3.2", path = "../bezier" }
lyon_tessellation = { version = "0.3.2", path = "../tessellation" }
lyon_path_builder = { version = "0.3.2", path = "../path_builder" }
lyon_path_iterator = { version = "0.3.2", path = "../path_iterator" }
