[package]

name = "vodk_gpu"
version = "0.0.1"
description = "Thin GPU abstraction on top of OpenGL. You should use glium instead."
license = "MIT"
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/vodk.rs"
include = [ "Cargo.toml", "src/*.rs" ]
license = "MIT/Apache-2.0"

[lib]
name = "vodk_gpu"
path = "src/lib.rs"

[dependencies.vodk_data]
path = "../data"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"
