[package]

name = "kiwi"
version = "0.0.2"
description = "A small graph library to help building node compositors"
license = "MIT/Apache-2.0"
authors = [
    "Nicolas Silva <nical@fastmail.com>",
]
repository = "https://github.com/nical/vodk.rs"
include = [
    "Cargo.toml",
    "src/*.rs",
]

[[lib]]
name = "kiwi"
path = "src/lib.rs"

[dependencies.vodk_id]
path = "../id/"
