[package]

name = "vodk_math"
version = "0.0.2"
description = "Yet another math vector and matrix library."
license = "MIT/Apache-2.0"
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/vodk.rs"
include = [ "Cargo.toml", "src/*.rs" ]


[lib]

name = "vodk_math"
path = "src/lib.rs"
