[package]
name = "lyon_path"
version = "0.8.6"
description = "A simple and optional path data structure that can be used with the rest of the lyon crates."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://nical.github.io/lyon-doc/lyon_path/"
license = "MIT/Apache-2.0"
workspace = ".."

[lib]
name = "lyon_path"

[dependencies]
lyon_geom = { version = "0.8.5", path = "../geom" }
