[package]
name = "lyon_path"
version = "0.9.0"
description = "Types and utilities to store, build and iterate over 2D paths."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_path/"
license = "MIT/Apache-2.0"
workspace = ".."

[lib]
name = "lyon_path"

[dependencies]
lyon_geom = { version = "0.9.0", path = "../geom" }
