[package]
name = "lyon_path"
version = "0.13.2"
description = "Types and utilities to store, build and iterate over 2D paths."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_path/"
license = "MIT/Apache-2.0"
workspace = ".."
edition = "2018"

[lib]
name = "lyon_path"

[features]
serialization = ["serde", "lyon_geom/serialization"]

[dependencies]
lyon_geom = { version = "0.12.7", path = "../geom" }
serde = { version = "1.0", optional = true, features = ["serde_derive"] }