[package]
name = "lyon_path_iterator"
version = "0.2.0"
description = "Iterator tools for vector paths."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
license = "MIT/Apache-2.0"

[lib]
name = "lyon_path_iterator"

[dependencies]

lyon_core = { version = "0.2.0", path = "../core" }
lyon_bezier = { version = "0.2.0", path = "../bezier" }
