[package]
name = "lyon_path_iterator"
version = "0.8.5"
description = "Iterator tools for vector paths."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_path_iterator/"
keywords = ["2d", "graphics", "svg"]
license = "MIT/Apache-2.0"
workspace = ".."

[lib]
name = "lyon_path_iterator"

[dependencies]

lyon_core = { version = "0.8.0", path = "../core" }
lyon_bezier = { version = "0.8.5", path = "../bezier" }
