[package]

name = "lyon_renderer"
version = "0.13.0"
description = "A GPU 2D renderer"
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_renderer/"
keywords = ["2d", "graphics"]
license = "MIT/Apache-2.0"
workspace = ".."
edition = "2018"

[lib]
name = "lyon_renderer"
path = "src/lib.rs"

[features]
serialization = ["serde", "lyon_tessellation/serialization"]
debugger = []
local = ["wgpu-native/local"]
metal = ["wgpu/metal"]
dx11 = ["wgpu/dx11"]
dx12 = ["wgpu/dx12"]
vulkan = ["wgpu/vulkan"]

[dependencies]

lyon_tessellation = { version = "0.13.1", path = "../tessellation" }
serde = { version = "1.0", optional = true, features = ["serde_derive"] }
wgpu = "0.2.3"
wgpu-native = "0.2.7"

