[package]

name = "lyon_renderer"
version = "0.1.0"
description = "2D Graphics rendering experiment."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
license = "MIT/Apache-2.0"
worskapce = ".."

exclude = [
    ".vscode/*",
]

# Uncomment this when profiling.
#[profile.release]
#debug = true

[dependencies]

gpu = { path = "gpu/" }
cache = { path = "cache/" }
pipe = { path = "pipe/" }
