[package]

name = "lyon_svg"
version = "0.7.2"
description = "SVG helpers for the lyon crates."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
license = "MIT/Apache-2.0"

[lib]
name = "lyon_svg"
path = "src/lib.rs"

[dependencies]

lyon_path_builder = { version = "0.7.0", path = "../path_builder" }
lyon_core = { version = "0.7.0", path = "../core" }

svgparser = "0.4"
