[package]

name = "lyon_svg"
version = "0.15.0"
description = "SVG helpers for the lyon crates."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "lyon_svg"
path = "src/lib.rs"

[dependencies]

lyon_path = { version = "0.15.0", path = "../path" }

svgparser = "0.8"
