[package]

name = "lyon_tess2"
version = "0.15.0"
description = "An additional path tessellator for lyon using libtess2."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_tess2/"
keywords = ["2d", "graphics", "tessellation", "svg"]
license = "MIT/Apache-2.0"
workspace = ".."
edition = "2018"

[lib]
name = "lyon_tess2"
path = "src/lib.rs"

[features]
serialization = ["serde", "lyon_tessellation/serialization"]

[dependencies]

lyon_tessellation = { version = "0.15.0", path = "../tessellation" }
serde = { version = "1.0", optional = true, features = ["serde_derive"] }
tess2-sys = "0.0.1"
