[package]

name = "lyon_tesselation"
version = "0.0.1"
description = "A low level path tesselation library."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
license = "MIT/Apache-2.0"

[lib]
name = "lyon_tesselation"
path = "src/lib.rs"

[dependencies]

lyon_core = { version = "0.0.1", path = "../core" }
lyon_extra = { version = "0.0.1", path = "../extra" }

sid = { version = "0.1.0" }
sid_vec = { version = "0.1.0" }
vodk_math = { version = "0.0.3" }
