[package]

name = "lyon_tessellation"
version = "0.10.2"
description = "A low level path tessellation library."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_tessellation/"
keywords = ["2d", "graphics", "tessellation", "svg"]
license = "MIT/Apache-2.0"
workspace = ".."

[lib]
name = "lyon_tessellation"
path = "src/lib.rs"

[features]
serialization = ["serde", "lyon_path/serialization"]

[dependencies]

lyon_path = { version = "0.10.1", path = "../path" }
sid = "0.5"
serde = { version = "1.0", optional = true, features = ["serde_derive"] }

[dev-dependencies]
lyon_extra = { version = "0.10.0", path = "../extra" }
