[package]

name = "lyon_tessellation"
version = "0.16.2"
description = "A low level path tessellation library."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_tessellation/"
keywords = ["2d", "graphics", "tessellation", "svg"]
license = "MIT/Apache-2.0"
workspace = ".."
edition = "2018"

[lib]
name = "lyon_tessellation"
path = "src/lib.rs"

[features]
serialization = ["serde", "lyon_path/serialization"]
debugger = []
experimental = []

[dependencies]

lyon_path = { version = "0.16.2", path = "../path" }
sid = "0.6"
serde = { version = "1.0", optional = true, features = ["serde_derive"] }
arrayvec = "0.5"

[dev-dependencies]
lyon_extra = { version = "0.16.0", path = "../extra" }
