[package]
name = "lyon_tests"
version = "1.0.2"
description = "Tests and benchmarks."
authors = ["Nicolas Silva <nical@fastmail.com>"]
repository = "https://github.com/nical/lyon"
license = "MIT OR Apache-2.0"
workspace = "../"
edition = "2018"

[lib]
name = "lyon_tests"
path = "src/lib.rs"


[dependencies]
lyon = { path = "../crates/lyon", features = ["extra"] }
num-traits = { version = "0.2.15" }
usvg = "0.15.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "flattening"
harness = false
