[package]
name = "lyon_wasm_test"
version = "0.11.0"
authors = ["Nicolas Silva <nical@fastmail.com>"]
repository = "https://github.com/nical/lyon"
keywords = ["2d", "graphics", "tessellation", "svg", "wasm"]
license = "MIT OR Apache-2.0"
workspace = ".."

[lib]
name = "wasm_test"
crate-type = ["cdylib"]

[dependencies]
lyon = { path = "../crates/lyon", features = ["extra"] }
