[package]
name = "lyon_svg_renderer"
version = "0.1.0"
authors = ["Nicolas Silva <nical@fastmail.com>"]
workspace = "../.."

[[bin]]
name = "renderer"
path = "src/svg_renderer.rs"

[dependencies]
lyon = { path = "../../" }
lyon_svg = { path = "../../svg" }
svgparser = "0.4"
glium = "0.15.0"
glutin = "0.6.1"
rayon = "0.4.2"
clap = "2.13.0"
