[package]
name = "tess_bench"
version = "0.0.1"
authors = ["Nicolas Silva <nical@fastmail.com>"]
workspace = "../.."

[[bin]]
name = "tess_bench"

[features]
libtess2 = ["tess2"]

[dependencies]
lyon = { path = "../../" }
bencher = "0.1.1"
tess2 = { git = "https://github.com/turnage/tess2.git", optional = true }
