[package]
name = "tess_bench"
version = "0.0.1"
authors = ["Nicolas Silva <nical@fastmail.com>"]
workspace = "../.."

[[bin]]
name = "tess_bench"

[features]
libtess2 = ["tess2-sys"]
experimental = ["lyon/experimental"]

[dependencies]
lyon = { path = "../../", features = ["extra"] }
bencher = "0.1.1"
tess2-sys = { version = "0.0.1", optional = true }
