[package]
name = "tess_bench"
version = "0.0.1"
authors = ["Nicolas Silva <nical@fastmail.com>"]
workspace = "../.."

[[bin]]
name = "tess_bench"
path = "src/main.rs"

[features]
libtess2 = ["tess2-sys"]
profiling = ["lyon/profiling"]

[dependencies]
lyon = { path = "../../crates/lyon", features = ["extra"] }
bencher = "0.1.1"
tess2-sys = { version = "0.0.1", optional = true }
