[package]
name = "lyon_algorithms"
version = "1.0.4"
description = "2D Path manipulation/transformation algorithms."
authors = ["Nicolas Silva <nical@fastmail.com>"]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_algorithms/"
keywords = ["2d", "graphics", "svg"]
license = "MIT OR Apache-2.0"
workspace = "../.."
edition = "2018"
exclude = [".backup*"]

[lib]
name = "lyon_algorithms"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["lyon_path/std", "num-traits/std"]
serialization = ["serde", "lyon_path/serialization"]

[dependencies]
lyon_path = { version = "1.0.2", path = "../path", default-features = false }
num-traits = { version = "0.2.15", default-features = false, features = ["libm"] }
serde = { version = "1.0", optional = true, features = ["serde_derive"], default-features = false }
