[package]
name = "lyon_extra"
version = "0.17.1"
description = "Various optional utilities for the lyon crate."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_extra/"
license = "MIT/Apache-2.0"
workspace = "../.."

[lib]
name = "lyon_extra"

[features]
serialization = ["lyon_path/serialization"]

[dependencies]
lyon_path = { version = "0.17.1", path = "../path" }
