[package]
name = "lyon_extra"
version = "1.1.0"
description = "Various optional utilities for the lyon crate."
authors = ["Nicolas Silva <nical@fastmail.com>"]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_extra/"
license = "MIT OR Apache-2.0"
workspace = "../.."
edition = "2018"

[lib]
name = "lyon_extra"

[features]
default = ["std"]
serialization = ["lyon_path/serialization"]
std = ["thiserror/std", "lyon_path/std"]

[dependencies]
lyon_path = { version = "1.0.0", path = "../path", default-features = false }
thiserror = { version = "2.0", default-features = false }
