[package]
name = "lyon"
version = "0.17.10"
description = "2D Graphics rendering on the GPU using tessellation."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon/"
keywords = ["2d", "graphics", "tessellation", "svg"]
license = "MIT/Apache-2.0"
workspace = "../.."
edition = "2018"

[lib]
name = "lyon"
path = "src/lib.rs"

[features]
serialization = ["lyon_tessellation/serialization"]
debugger = ["lyon_tessellation/debugger"]
experimental = ["lyon_tessellation/experimental"]
svg = ["lyon_svg"]
extra = ["lyon_extra"]
libtess2 = ["lyon_tess2"]
profiling = ["lyon_tessellation/profiling"]

[dependencies]
lyon_tessellation = { version = "0.17.10", path = "../tessellation/" }
lyon_algorithms = { version = "0.17.6", path = "../algorithms/" }
lyon_extra = { version = "0.17.1", optional = true, path = "../extra/" }
lyon_svg = { version = "0.17.1", optional = true, path = "../svg/" }
lyon_tess2 = { version = "0.17.1", optional = true, path = "../tess2/" }
